--- a/DoAnTotNghiep/src/main/resources/datasource.properties
+++ b/DoAnTotNghiep/src/main/resources/datasource.properties
@@ -1,10 +1,10 @@
-db.driver=com.microsoft.sqlserver.jdbc.SQLServerDriver
-db.url=jdbc:sqlserver://localhost;database=duan
-db.username=duan
-db.password=12345
+db.driver=com.mysql.cj.jdbc.Driver
+db.url=jdbc:mysql://localhost:3306/duan
+db.username=root
+db.password=Trungphan0122
 hb.show-sql=false
 hb.ddl-auto=create-drop
-hb.dialect=org.hibernate.dialect.SQLServer2008Dialect
+hb.dialect=org.hibernate.dialect.MySQLDialect
 hb.session=org.springframework.orm.hibernate5.SpringSessionContext
 
 
