SIM-1853: Fix Bug

--- a/DoAnTotNghiep/src/main/resources/datasource.properties
+++ b/DoAnTotNghiep/src/main/resources/datasource.properties
@@ -1,7 +1,7 @@
 db.driver=com.mysql.cj.jdbc.Driver
 db.url=jdbc:mysql://localhost:3306/duan
 db.username=root
-db.password=Trungphan0122
+db.password=123456
 hb.show-sql=false
 hb.ddl-auto=create-drop
 hb.dialect=org.hibernate.dialect.MySQLDialect
